--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>{% block title %} {% endblock title %}| La Caffettiera</title>
+    <title>{% block title %} {% endblock title %}| La Tentación en Azúcar</title>
     {% load static  %} 
 
     <!-- Bootstrap -->
